libpurple/wrapper/Blist.cs

/* PurpleWrapper - A .NET (CLR) wrapper for libpurple
 *
 * Purple is the legal property of its developers, whose names are too numerous
 * to list here.  Please refer to the COPYRIGHT file distributed with this
 * source distribution.
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 2 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02111-1301  USA
 */

/*
 * This file was auto-generated from the libpurple header files to provide a
 * clean interface between .NET/CLR and the unmanaged C library libpurple.
 *
 * This is the second major commit of the code.
 * Next things:
 *  - A few of the .h files have anonymous parameter names (eg: void cat(int, int).
 *    This program will need to assign these parameters names.
 *  - Function pointers inside structs aren't translated correctly into C#.
 *  - Two places there are specific-length arrays (eg: char hostname[256]). The parser
 *    does not detect them as an array.
 */

using System;
using System.Collections.Generic;
using System.Runtime.InteropServices;

namespace PurpleWrapper
{
	public class Blist
	{
		public enum PurpleBlistNodeType
		{
			PURPLE_BLIST_GROUP_NODE,
			PURPLE_BLIST_CONTACT_NODE,
			PURPLE_BLIST_BUDDY_NODE,
			PURPLE_BLIST_CHAT_NODE,
			PURPLE_BLIST_OTHER_NODE
		};

		public enum PurpleBlistNodeFlags
		{
			PURPLE_BLIST_NODE_FLAG_NO_SAVE = 1 << 0
		};

		/*
		 * PurpleBuddyList * purple_blist_new()
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_blist_new();

		public static PurpleBuddyList New()
		{
			return new PurpleBuddyList(purple_blist_new());
		}

		/*
		 * void purple_set_blist(PurpleBuddyList * blist)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_set_blist(IntPtr blist);

		public static void SetBlist(PurpleBuddyList blist)
		{
			purple_set_blist(blist.Reference);
		}

		/*
		 * PurpleBuddyList * purple_get_blist()
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_get_blist();

		public static PurpleBuddyList GetBlist()
		{
			return new PurpleBuddyList(purple_get_blist());
		}

		/*
		 * PurpleBlistNode * purple_blist_get_root()
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_blist_get_root();

		public static PurpleBlistNode GetRoot()
		{
			return new PurpleBlistNode(purple_blist_get_root());
		}

		/*
		 * GSList * purple_blist_get_buddies()
		 * 
		 * Could not generate a wrapper for purple_blist_get_buddies in file "blist.h".
		 * Message: The type could not be resolved (GSList * purple_blist_get_buddies()).
		 */

		/*
		 * gpointer purple_blist_get_ui_data()
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_blist_get_ui_data();

		public static IntPtr GetUiData()
		{
			return purple_blist_get_ui_data();
		}

		/*
		 * void purple_blist_set_ui_data(gpointer ui_data)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_blist_set_ui_data(IntPtr ui_data);

		public static void SetUiData(IntPtr ui_data)
		{
			purple_blist_set_ui_data(ui_data);
		}

		/*
		 * PurpleBlistNode * purple_blist_node_next(PurpleBlistNode * node, gboolean offline)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_blist_node_next(IntPtr node, bool offline);

		public static PurpleBlistNode NodeNext(PurpleBlistNode node, bool offline)
		{
			return new PurpleBlistNode(purple_blist_node_next(node.Reference, offline));
		}

		/*
		 * PurpleBlistNode * purple_blist_node_get_parent(PurpleBlistNode * node)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_blist_node_get_parent(IntPtr node);

		public static PurpleBlistNode NodeGetParent(PurpleBlistNode node)
		{
			return new PurpleBlistNode(purple_blist_node_get_parent(node.Reference));
		}

		/*
		 * PurpleBlistNode * purple_blist_node_get_first_child(PurpleBlistNode * node)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_blist_node_get_first_child(IntPtr node);

		public static PurpleBlistNode NodeGetFirstChild(PurpleBlistNode node)
		{
			return new PurpleBlistNode(purple_blist_node_get_first_child(node.Reference));
		}

		/*
		 * PurpleBlistNode * purple_blist_node_get_sibling_next(PurpleBlistNode * node)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_blist_node_get_sibling_next(IntPtr node);

		public static PurpleBlistNode NodeGetSiblingNext(PurpleBlistNode node)
		{
			return new PurpleBlistNode(purple_blist_node_get_sibling_next(node.Reference));
		}

		/*
		 * PurpleBlistNode * purple_blist_node_get_sibling_prev(PurpleBlistNode * node)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_blist_node_get_sibling_prev(IntPtr node);

		public static PurpleBlistNode NodeGetSiblingPrev(PurpleBlistNode node)
		{
			return new PurpleBlistNode(purple_blist_node_get_sibling_prev(node.Reference));
		}

		/*
		 * gpointer purple_blist_node_get_ui_data(PurpleBlistNode * node)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_blist_node_get_ui_data(IntPtr node);

		public static IntPtr NodeGetUiData(PurpleBlistNode node)
		{
			return purple_blist_node_get_ui_data(node.Reference);
		}

		/*
		 * void purple_blist_node_set_ui_data(PurpleBlistNode * node, gpointer ui_data)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_blist_node_set_ui_data(IntPtr node, IntPtr ui_data);

		public static void NodeSetUiData(PurpleBlistNode node, IntPtr ui_data)
		{
			purple_blist_node_set_ui_data(node.Reference, ui_data);
		}

		/*
		 * void purple_blist_show()
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_blist_show();

		public static void Show()
		{
			purple_blist_show();
		}

		/*
		 * void purple_blist_destroy()
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_blist_destroy();

		public static void Destroy()
		{
			purple_blist_destroy();
		}

		/*
		 * void purple_blist_set_visible(gboolean show)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_blist_set_visible(bool show);

		public static void SetVisible(bool show)
		{
			purple_blist_set_visible(show);
		}

		/*
		 * void purple_blist_update_buddy_status(PurpleBuddy * buddy, PurpleStatus * old_status)
		 * 
		 * Could not generate a wrapper for purple_blist_update_buddy_status in file "blist.h".
		 * Message: The type could not be resolved (PurpleStatus * old_status).
		 */

		/*
		 * void purple_blist_update_node_icon(PurpleBlistNode * node)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_blist_update_node_icon(IntPtr node);

		public static void UpdateNodeIcon(PurpleBlistNode node)
		{
			purple_blist_update_node_icon(node.Reference);
		}

		/*
		 * void purple_blist_update_buddy_icon(PurpleBuddy * buddy)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_blist_update_buddy_icon(IntPtr buddy);

		public static void UpdateBuddyIcon(PurpleBuddy buddy)
		{
			purple_blist_update_buddy_icon(buddy.Reference);
		}

		/*
		 * void purple_blist_rename_buddy(PurpleBuddy * buddy, char * name)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_blist_rename_buddy(IntPtr buddy, string name);

		public static void RenameBuddy(PurpleBuddy buddy, string name)
		{
			purple_blist_rename_buddy(buddy.Reference, name);
		}

		/*
		 * void purple_blist_alias_contact(PurpleContact * contact, char * alias)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_blist_alias_contact(IntPtr contact, string alias);

		public static void AliasContact(PurpleContact contact, string alias)
		{
			purple_blist_alias_contact(contact.Reference, alias);
		}

		/*
		 * void purple_blist_alias_buddy(PurpleBuddy * buddy, char * alias)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_blist_alias_buddy(IntPtr buddy, string alias);

		public static void AliasBuddy(PurpleBuddy buddy, string alias)
		{
			purple_blist_alias_buddy(buddy.Reference, alias);
		}

		/*
		 * void purple_blist_server_alias_buddy(PurpleBuddy * buddy, char * alias)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_blist_server_alias_buddy(IntPtr buddy, string alias);

		public static void ServerAliasBuddy(PurpleBuddy buddy, string alias)
		{
			purple_blist_server_alias_buddy(buddy.Reference, alias);
		}

		/*
		 * void purple_blist_alias_chat(PurpleChat * chat, char * alias)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_blist_alias_chat(IntPtr chat, string alias);

		public static void AliasChat(PurpleChat chat, string alias)
		{
			purple_blist_alias_chat(chat.Reference, alias);
		}

		/*
		 * void purple_blist_rename_group(PurpleGroup * group, char * name)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_blist_rename_group(IntPtr group, string name);

		public static void RenameGroup(PurpleGroup group, string name)
		{
			purple_blist_rename_group(group.Reference, name);
		}

		/*
		 * PurpleChat * purple_chat_new(PurpleAccount * account, char * alias, GHashTable * components)
		 * 
		 * Could not generate a wrapper for purple_chat_new in file "blist.h".
		 * Message: The type could not be resolved (GHashTable * components).
		 */

		/*
		 * void purple_chat_destroy(PurpleChat * chat)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_chat_destroy(IntPtr chat);

		public static void ChatDestroy(PurpleChat chat)
		{
			purple_chat_destroy(chat.Reference);
		}

		/*
		 * void purple_blist_add_chat(PurpleChat * chat, PurpleGroup * group, PurpleBlistNode * node)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_blist_add_chat(IntPtr chat, IntPtr group, IntPtr node);

		public static void AddChat(PurpleChat chat, PurpleGroup group, PurpleBlistNode node)
		{
			purple_blist_add_chat(chat.Reference, group.Reference, node.Reference);
		}

		/*
		 * PurpleBuddy * purple_buddy_new(PurpleAccount * account, char * name, char * alias)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_buddy_new(IntPtr account, string name, string alias);

		public static PurpleBuddy BuddyNew(PurpleAccount account, string name, string alias)
		{
			return new PurpleBuddy(purple_buddy_new(account.Reference, name, alias));
		}

		/*
		 * void purple_buddy_destroy(PurpleBuddy * buddy)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_buddy_destroy(IntPtr buddy);

		public static void BuddyDestroy(PurpleBuddy buddy)
		{
			purple_buddy_destroy(buddy.Reference);
		}

		/*
		 * void purple_buddy_set_icon(PurpleBuddy * buddy, PurpleBuddyIcon * icon)
		 * 
		 * Could not generate a wrapper for purple_buddy_set_icon in file "blist.h".
		 * Message: The type could not be resolved (PurpleBuddyIcon * icon).
		 */
